# adbc_clickhouse

./: Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: lib.rs  option.rs  options.rs  reader.rs  schema.rs  statement.rs  writer.rs
tests/it/: bulk_ingest.rs  get_table_schema.rs  main.rs  params.rs
