[package]
name = "adbc_clickhouse"
version = "0.0.1"
edition = "2024"
description = "Official ClickHouse ADBC driver."
authors = [
    "Austin Bonander <austin.bonander@clickhouse.com>",
    "Serge Klochkov <serge.klochkov@clickhouse.com>"
]
# TODO: replace with ADBC client page on docs
homepage = "https://clickhouse.com/docs/integrations/rust"
# Note: private
repository = "https://github.com/clickhouse/adbc_clickhouse"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
ffi = ["adbc_ffi"]

native-tls = ["clickhouse/native-tls"]
rustls-tls = ["clickhouse/rustls-tls"]
rustls-tls-aws-lc = ["clickhouse/rustls-tls-aws-lc"]
rustls-tls-ring = ["clickhouse/rustls-tls-ring"]
rustls-tls-native-roots = ["clickhouse/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["clickhouse/rustls-tls-webpki-roots"]

[dependencies]
arrow-array = "57.0.0"
arrow-buffer = "57.0.0"
arrow-ipc = { version = "57.0.0", features = ["lz4"] }
arrow-schema = "57.0.0"

adbc_core = "0.22.0"
adbc_ffi = { version = "0.22.0", optional = true }

clickhouse-types = "0.1.1"
uuid = { version = "1.19.0", features = ["v4"] }

[dependencies.clickhouse]
version = "0.14.2"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[dependencies.tokio]
version = "1.48.0"
features = ["rt"]

[[test]]
name = "it"
path = "tests/it/main.rs"

[dev-dependencies]
arrow = "57.0.0"
adbc_driver_manager = "0.22.0"

[dev-dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
